# BlueTeam-AI

AI-Applications/: .dockerignore  .gitignore  Dockerfile  README.md  RELEASE.md  docker-compose.yml  pyproject.toml  requirements-docker.txt  requirements.txt  run.py
AI-Applications/docker/: certificates.py  entrypoint.py  run_servers.py
AI-Applications/docs/: architecture.md
AI-Applications/knowledge_base/faqs/: general_faq.md
AI-Applications/knowledge_base/policies/: return_warranty_policy.md  shipping_customer_service.md
AI-Applications/knowledge_base/product_manuals/: usb_c_cables.md
AI-Applications/knowledge_base/scenarios/: advanced_attack_scenarios.md  ai300_frameworks_guide.md  ai_defense_guide.md  ai_reconnaissance_guide.md  auth_modes_guide.md  challenge_engine_guide.md  mcp_security_guide.md  prompt_injection_series.md  security_systems_guide.md
AI-Applications/scripts/: mcp_server.py  render_mermaid.py  run.py  ticket_monitor.py
AI-Applications/src/llamafw/: __init__.py  ai300_frameworks.py  ai300_modules.py  ai300_owasp_modules.py  ai_defense.py  ai_recon.py  app.py  challenge_engine.py  config.py  core.py  database.py  input_sanitizer.py  mcp_security.py  openairt300_backend.py  security_systems.py  vector_rag.py
AI-Applications/static/: jailbreak_samples.txt  lab.css  protocol.js  robots.txt
AI-Applications/templates/: _nav.html  admin.html  chat.html  compat.html  home.html  lab_detail.html  labs.html  lobechat.html  login.html  products.html  rate_limit.html  ticket_detail.html  tickets.html
AI-Applications/tests/: _result.txt  _result2.txt  test_auth.py  test_auth_multimode.py  test_frameworks.py  test_frameworks_summary.py  test_overview.py
Llama Firewall/: download_model.py
