[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aiseclab"
version = "0.2.0"
description = "AISecLab — AI 安全训练靶机 + 智能客服模拟平台"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["ai-security", "red-team", "prompt-injection", "training-target", "customer-service", "RAG", "ticket-system"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
aiseclab-run = "scripts.run:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
